@@ -34,6 +34,11 @@ name|defined
 argument_list|(
 name|TEL_S0_16_3_P
 argument_list|)
+operator|||
+name|defined
+argument_list|(
+name|COMPAQ_M610
+argument_list|)
 operator|)
 end_if
 
@@ -399,6 +404,9 @@ decl_stmt|;
 name|u_int32_t
 name|iobase2
 decl_stmt|;
+name|u_int32_t
+name|iocfg
+decl_stmt|;
 name|int
 name|unit
 init|=
@@ -493,7 +501,134 @@ return|return
 name|ENXIO
 return|;
 block|}
+comment|/* 	 * Compaq M610 has a cfg io area, 	 * we need it 	 */
+if|if
+condition|(
+name|sc
+operator|->
+name|sc_cardtyp
+operator|==
+name|CARD_TYPEP_COMPAQ_M610
+condition|)
+block|{
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_rid
+index|[
+literal|2
+index|]
+operator|=
+literal|2
+expr_stmt|;
+if|if
+condition|(
+operator|!
+operator|(
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|2
+index|]
+operator|=
+name|bus_alloc_resource
+argument_list|(
+name|dev
+argument_list|,
+name|SYS_RES_IOPORT
+argument_list|,
+operator|&
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_rid
+index|[
+literal|2
+index|]
+argument_list|,
+literal|0UL
+argument_list|,
+operator|~
+literal|0UL
+argument_list|,
+literal|1
+argument_list|,
+name|RF_ACTIVE
+argument_list|)
+operator|)
+condition|)
+block|{
+name|printf
+argument_list|(
+literal|"isic%d: Could not get cfg io area for Compaq Microcom 610\n"
+argument_list|,
+name|unit
+argument_list|)
+expr_stmt|;
+name|isic_detach_common
+argument_list|(
+name|dev
+argument_list|)
+expr_stmt|;
+return|return
+name|ENXIO
+return|;
+block|}
+name|iocfg
+operator|=
+name|rman_get_start
+argument_list|(
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|2
+index|]
+argument_list|)
+expr_stmt|;
+name|bus_release_resource
+argument_list|(
+name|dev
+argument_list|,
+name|SYS_RES_IOPORT
+argument_list|,
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_rid
+index|[
+literal|2
+index|]
+argument_list|,
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|2
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 comment|/* remember the io base addresses */
+if|if
+condition|(
+name|sc
+operator|->
+name|sc_cardtyp
+operator|!=
+name|CARD_TYPEP_COMPAQ_M610
+condition|)
+block|{
 name|iobase1
 operator|=
 name|rman_get_start
@@ -522,7 +657,39 @@ literal|1
 index|]
 argument_list|)
 expr_stmt|;
-comment|/* 	 * because overlapping resources are invalid, 	 * release the first io port resource 	 */
+block|}
+else|else
+block|{
+name|iobase1
+operator|=
+name|rman_get_start
+argument_list|(
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+name|iobase2
+operator|=
+name|rman_get_start
+argument_list|(
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+comment|/* 	 * because overlapping resources are invalid, 	 * release the first and second io port resource 	 */
 name|bus_release_resource
 argument_list|(
 name|dev
@@ -545,6 +712,31 @@ operator|.
 name|io_base
 index|[
 literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|bus_release_resource
+argument_list|(
+name|dev
+argument_list|,
+name|SYS_RES_IOPORT
+argument_list|,
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_rid
+index|[
+literal|1
+index|]
+argument_list|,
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|1
 index|]
 argument_list|)
 expr_stmt|;
@@ -632,32 +824,6 @@ return|return
 name|ENXIO
 return|;
 block|}
-comment|/* 	 * because overlapping resources are invalid, 	 * release the second io port resource 	 */
-name|bus_release_resource
-argument_list|(
-name|dev
-argument_list|,
-name|SYS_RES_IOPORT
-argument_list|,
-name|sc
-operator|->
-name|sc_resources
-operator|.
-name|io_rid
-index|[
-literal|1
-index|]
-argument_list|,
-name|sc
-operator|->
-name|sc_resources
-operator|.
-name|io_base
-index|[
-literal|1
-index|]
-argument_list|)
-expr_stmt|;
 comment|/* set and allocate a resource for the HSCX channel A */
 name|sc
 operator|->
@@ -834,6 +1000,98 @@ return|return
 name|ENXIO
 return|;
 block|}
+comment|/* 	 * set and allocate a resource for the cfg io 	 * for compaq m610 	 */
+if|if
+condition|(
+name|sc
+operator|->
+name|sc_cardtyp
+operator|==
+name|CARD_TYPEP_COMPAQ_M610
+condition|)
+block|{
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_rid
+index|[
+literal|5
+index|]
+operator|=
+literal|5
+expr_stmt|;
+name|bus_set_resource
+argument_list|(
+name|dev
+argument_list|,
+name|SYS_RES_IOPORT
+argument_list|,
+literal|5
+argument_list|,
+name|iocfg
+argument_list|,
+literal|0x01
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+operator|(
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|5
+index|]
+operator|=
+name|bus_alloc_resource
+argument_list|(
+name|dev
+argument_list|,
+name|SYS_RES_IOPORT
+argument_list|,
+operator|&
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_rid
+index|[
+literal|5
+index|]
+argument_list|,
+literal|0ul
+argument_list|,
+operator|~
+literal|0ul
+argument_list|,
+literal|1
+argument_list|,
+name|RF_ACTIVE
+argument_list|)
+operator|)
+condition|)
+block|{
+name|printf
+argument_list|(
+literal|"isic%d: Could not get cfg io area for Compaq Microcom 610!\n"
+argument_list|,
+name|unit
+argument_list|)
+expr_stmt|;
+name|isic_detach_common
+argument_list|(
+name|dev
+argument_list|)
+expr_stmt|;
+return|return
+name|ENXIO
+return|;
+block|}
+block|}
 comment|/* setup access routines */
 name|sc
 operator|->
@@ -866,6 +1124,14 @@ operator|=
 name|ctxs0P_write_fifo
 expr_stmt|;
 comment|/* setup card type */
+if|if
+condition|(
+name|sc
+operator|->
+name|sc_cardtyp
+operator|!=
+name|CARD_TYPEP_COMPAQ_M610
+condition|)
 name|sc
 operator|->
 name|sc_cardtyp
@@ -892,6 +1158,15 @@ operator|=
 name|HSCX_FIFO_LEN
 expr_stmt|;
 comment|/* enable the card */
+if|if
+condition|(
+name|sc
+operator|->
+name|sc_cardtyp
+operator|!=
+name|CARD_TYPEP_COMPAQ_M610
+condition|)
+block|{
 name|t
 operator|=
 name|rman_get_bustag
@@ -956,6 +1231,74 @@ operator|/
 literal|10
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|t
+operator|=
+name|rman_get_bustag
+argument_list|(
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|5
+index|]
+argument_list|)
+expr_stmt|;
+name|h
+operator|=
+name|rman_get_bushandle
+argument_list|(
+name|sc
+operator|->
+name|sc_resources
+operator|.
+name|io_base
+index|[
+literal|5
+index|]
+argument_list|)
+expr_stmt|;
+name|bus_space_write_1
+argument_list|(
+name|t
+argument_list|,
+name|h
+argument_list|,
+literal|0xff
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|DELAY
+argument_list|(
+name|SEC_DELAY
+operator|/
+literal|10
+argument_list|)
+expr_stmt|;
+name|bus_space_write_1
+argument_list|(
+name|t
+argument_list|,
+name|h
+argument_list|,
+literal|0x00
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|DELAY
+argument_list|(
+name|SEC_DELAY
+operator|/
+literal|10
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 literal|0
 return|;
@@ -968,7 +1311,7 @@ directive|endif
 end_endif
 
 begin_comment
-comment|/* (NISIC> 0)&& (defined(CRTX_S0_P) || defined(TEL_S0_16_3_P)) */
+comment|/* (NISIC> 0)&& (defined(CRTX_S0_P) || defined(TEL_S0_16_3_P) || defined(COMPAQ_M610)) */
 end_comment
 
 end_unit
